--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,5 +1,15 @@
 ---
-
+const pageTitle = "About Me"
+const identity = {
+    firstName: "Tarreq",
+    country: "IDN",
+    occupation: "Explorer",
+    hobbies: ["read books", "running", "movies"]
+}
+const skills = ["Math","Python","Java","Writing Blogs"]
+const happy = true
+const finished = false
+const goal = 3
 ---
 
 <html lang="en">
@@ -8,18 +18,41 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
+		<title>{pageTitle}</title>
 	</head>
     <body>
         <a href="/">Home</a>
-<a href="/about/">About</a>
-<a href="/blog">Blog</a>
+        <a href="/about/">About</a>
+        <a href="/blog">Blog</a>
 
-        <h1>About Me</h1>
+        <h1>{pageTitle}</h1>
         <h2>... and my new Astro site!</h2>
       
         <p>I am working through Astro's introductory tutorial. This is the second page on my website, and it's the first one I built myself!</p>
       
         <p>This site will update as I complete more of the tutorial, so keep checking back and see how my journey is going!</p>
+
+        <p>Here are a few facts about me:</p>
+        <ul>
+            <li>My name is {identity.firstName}</li>
+            <li>I live in {identity.country}</li>
+            {
+                identity.hobbies.length >= 2 &&
+                <li>Two of my hobbies are: {identity.hobbies[0]} and {identity.hobbies[1]}</li>
+            }
+        </ul>
+        <p>
+            My skills are:
+            <ul>
+                {skills.map((skills => <li>{skills}</li>))}
+            </ul>
+
+            {happy && <p>I am happy to be learning Astro!</p>}
+
+            {finished && <p>I finished this tutorial!</p>}
+
+            {goal === 3 ? <p>My goal is to finish in 3 days.</p> : <p>My goal is not 3 days.</p>}
+        </p>
+        
     </body>
 </html>
