--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,4 +1,6 @@
 ---
+import Navigation from '../components/Navigation.astro'
+import Footer from '../components/Footer.astro'
 import '../styles/global.css'
 const pageTitle = "About Me"
 const identity = {
@@ -37,9 +39,7 @@ const textCase = "none"
         </style>
 	</head>
     <body>
-        <a href="/">Home</a>
-        <a href="/about/">About</a>
-        <a href="/blog">Blog</a>
+        <Navigation />
 
         <h1>{pageTitle}</h1>
         <h2>... and my new Astro site!</h2>
@@ -69,6 +69,6 @@ const textCase = "none"
 
             {goal === 3 ? <p>My goal is to finish in 3 days.</p> : <p>My goal is not 3 days.</p>}
         </p>
-        
+        <Footer />
     </body>
 </html>
