--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,4 +1,6 @@
 ---
+import Navigation from "../components/Navigation.astro"
+import Footer from "../components/Footer.astro"
 import "../styles/global.css"
 const pageTitle = "My Astro Learning Blog"
 ---
@@ -12,9 +14,7 @@ const pageTitle = "My Astro Learning Blog"
 		<title>{pageTitle}</title>
 	</head>
     <body>
-        <a href="/">Home</a>
-        <a href="/about/">About</a>
-        <a href="/blog">Blog</a>
+        <Navigation />
 
         <h1>{pageTitle}</h1>
         <p>This is where I will post about my journey learning Astro.</p>
@@ -23,5 +23,6 @@ const pageTitle = "My Astro Learning Blog"
             <li><a href="/posts/post-2">Post 2</a></li>
             <li><a href="/posts/post-3">Post 3</a></li>
         </ul>
+        <Footer />
     </body>
 </html>
