--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,5 +1,5 @@
 ---
-import Navigation from '../components/Navigation.astro'
+import Header from '../components/Header.astro'
 import Footer from '../components/Footer.astro'
 import '../styles/global.css'
 const pageTitle = "About Me"
@@ -39,7 +39,7 @@ const textCase = "none"
         </style>
 	</head>
     <body>
-        <Navigation />
+        <Header />
 
         <h1>{pageTitle}</h1>
         <h2>... and my new Astro site!</h2>
