--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,5 +1,5 @@
 ---
-import Navigation from "../components/Navigation.astro"
+import Header from "../components/Header.astro"
 import Footer from "../components/Footer.astro"
 import "../styles/global.css"
 const pageTitle = "My Astro Learning Blog"
@@ -14,7 +14,7 @@ const pageTitle = "My Astro Learning Blog"
 		<title>{pageTitle}</title>
 	</head>
     <body>
-        <Navigation />
+        <Header />
 
         <h1>{pageTitle}</h1>
         <p>This is where I will post about my journey learning Astro.</p>
