--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,5 +18,10 @@ const pageTitle = "Home Page"
 		<Header/>
 		<h1>{pageTitle}</h1>
 		<Footer />
+		<script>
+			document.querySelector('.hamburger').addEventListener('click',()=>{
+				document.querySelector('.nav-links').classList.toggle('expanded');
+			});
+		</script>
 	</body>
 </html>
