--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -21,10 +21,24 @@ html {
     margin: 1rem 0;
     font-size: 2.5rem;
   }
-  
+
   /* nav styles */
 
-.nav-links {
+  .hamburger {
+    padding-right: 20px;
+    cursor: pointer;
+  }
+  
+  .hamburger .line {
+    display: block;
+    width: 40px;
+    height: 5px;
+    margin-bottom: 10px;
+    background-color: #ff9776;
+  }
+  
+
+  .nav-links {
     width: 100%;
     top: 5rem;
     left: 48px;
@@ -64,6 +78,10 @@ html {
     .nav-links a {
       display: inline-block;
       padding: 15px 20px;
+    }
+
+    .hamburger{
+        display: none;
     }
   
   }
