refactoring script for hamburger component

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -70,5 +70,8 @@ const textCase = "none"
             {goal === 3 ? <p>My goal is to finish in 3 days.</p> : <p>My goal is not 3 days.</p>}
         </p>
         <Footer />
+        <script>
+			import "../scripts/menu.js"
+		</script>
     </body>
 </html>
