--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,9 +19,7 @@ const pageTitle = "Home Page"
 		<h1>{pageTitle}</h1>
 		<Footer />
 		<script>
-			document.querySelector('.hamburger').addEventListener('click',()=>{
-				document.querySelector('.nav-links').classList.toggle('expanded');
-			});
+			import "../scripts/menu.js"
 		</script>
 	</body>
 </html>
