--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -3,6 +3,7 @@ import Header from "../components/Header.astro"
 import Footer from "../components/Footer.astro"
 import "../styles/global.css"
 const pageTitle = "My Astro Learning Blog"
+const allPosts = await Astro.glob('./posts/*.md')
 ---
 
 <html lang="en">
@@ -19,9 +20,7 @@ const pageTitle = "My Astro Learning Blog"
         <h1>{pageTitle}</h1>
         <p>This is where I will post about my journey learning Astro.</p>
         <ul>
-            <li><a href="/posts/post-1">Post 1</a></li>
-            <li><a href="/posts/post-2">Post 2</a></li>
-            <li><a href="/posts/post-3">Post 3</a></li>
+            {allPosts.map((post) => <li><a href={post.url}>{post.frontmatter.title}</a></li>)}
         </ul>
         <Footer />
         <script>
