--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,6 +1,7 @@
 ---
 import Header from "../components/Header.astro"
 import Footer from "../components/Footer.astro"
+import BlogPost from "../components/BlogPost.astro"
 import "../styles/global.css"
 const pageTitle = "My Astro Learning Blog"
 const allPosts = await Astro.glob('./posts/*.md')
@@ -20,7 +21,7 @@ const allPosts = await Astro.glob('./posts/*.md')
         <h1>{pageTitle}</h1>
         <p>This is where I will post about my journey learning Astro.</p>
         <ul>
-            {allPosts.map((post) => <li><a href={post.url}>{post.frontmatter.title}</a></li>)}
+            {allPosts.map((post) => <BlogPost url={post.url} title={post.frontmatter.title}/>)}
         </ul>
         <Footer />
         <script>
