--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,6 +4,13 @@ html {
     background-color:snow;
     font-family: sans-serif;
   }
+html.dark {
+  background-color: #0d0950;
+  color: #fff;
+}
+.dark .nav-links a{
+  color: #fff;
+}
   
   body {
     margin: 0 auto;
